# internal/busi/api/v1/busi.go
@@ -89,3 +89,41 @@ func WfilEventCronHandle(c *gin.Context) {
 
 	app.HTTPResponseOK(nil)
 }
+
+// wfil's event manual job godoc
+// @Description wfil's event manual job api
+// @Tags Inner|Manual
+// @Accept application/json,json
+// @Produce application/json,json
+// @Param RequestHeight query core.RequestHeight false "RequestHeight"
+// @Success 200 {object} utils.ResponseCode
+// @Router /wfil-event-tracing [post]
+func WfilEventHandle(c *gin.Context) {
+	app := utils.Gin{C: c}
+
+	var r core.RequestHeight
+	if err := c.ShouldBindQuery(&r); err != nil {
+		app.HTTPResponse(http.StatusOK, utils.NewResponse(utils.CodeBadRequest, err.Error(), nil))
+		return
+	}
+
+	if err := r.Validate(); err != nil {
+		app.HTTPResponse(http.StatusBadRequest, utils.NewResponse(utils.CodeBadRequest, err.Error(), nil))
+		return
+	}
+
+	lotus0, _ := c.Get(LOTUS0)
+	r.Lotus0, _ = lotus0.(string)
+
+	wfil, _ := c.Get(WFIL)
+	r.WfilContract, _ = wfil.(string)
+	r.WfilContract = strings.ToLower(r.WfilContract)
+
+	resp := core.WfilEventHandle(c.Request.Context(), &r)
+	if resp != nil {
+		app.HTTPResponse(http.StatusOK, resp.Response)
+		return
+	}
+
+	app.HTTPResponseOK(nil)
+}
